# polyStrat3

./: .gitignore  Cargo.toml  README.md  USER_MANUAL.md
config/: credentials.toml.example  maker.toml  taker.toml
example/: journal_sample.jsonl  trade_log_sample.txt
src/: alpha.rs  config.rs  fair.rs  journal.rs  latency.rs  lib.rs  main.rs  oms.rs  pnl_log.rs  position.rs  spot.rs  trade_log.rs  types.rs
src/engine/: execution.rs  feeds.rs  mod.rs  portfolio.rs  session.rs  tests.rs
src/exec/: dry_run.rs  live.rs  mod.rs
src/md/: binance.rs  chainlink.rs  clob_market.rs  gamma.rs  mod.rs  user_channel.rs
src/strategy/: maker.rs  mod.rs  taker.rs
src/strategy/maker/: tests.rs
src/strategy/taker/: tests.rs
tests/: connectivity.rs  fair_test.rs  spot_test.rs  trade_log_test.rs
